--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 crossterm = "0.23.2"
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
 dirs = "1"
 pest = "2.4"
 pest_derive = "2.4"
